--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
+}
+.nav-container{
+    display: flex;
+    background-color: gray;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+}
+.menu > ul{
+    list-style: none;
+    display: flex;
+    gap: 15px;
+    font-size: 20px;
+}
+a{
+    text-decoration: none;
+    color: white;
 }
